--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="format.css" />
+    <title>ZakalataMax</title>
   </head>
   <body>
-    Hello, team!!!
+    <header>
+      <nav>
+        <!-- logo n menu -->
+      </nav>
+      <!-- button -->
+    </header>
+    <main>
+      <section>
+        <h1>Сучасна пекарня</h1>
+      </section>
+      <section>
+        <h2>Новий формат традицій</h2>
+        <p><span class="green123">Shop bakery</span> блаблабла</p>
+        <p></p>
+      </section>
+      <section>
+        <h2>Наші найкращі кухарі</h2>
+        <h3>Настя</h3>
+        <h3>Влад</h3>
+        <article></article>
+        <article></article>
+      </section>
+      <section>
+        <h2>Формати</h2>
+        <article>
+          <h3>Walrus</h3>
+        </article>
+        <article>
+          <h3>Horseshoe</h3>
+        </article>
+        <article>
+          <h3>Handlebar</h3>
+        </article>
+      </section>
+      <section>
+        <h2>Приєднуйтеся до мережі пекарень</h2>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
