--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
       </section>
       <section>
         <h2>Новий формат традицій</h2>
-        <p><span class="green123">Shop bakery</span> блаблабла</p>
-        <p></p>
+        <p><span class="green">Shop bakery</span> блаблабла</p>
+        <p>
+          знову блаблабла <span class="green">5 хвилин і тут як тут</span> і
+          знову таки блаблабла
+        </p>
       </section>
       <section>
         <h2>Наші найкращі кухарі</h2>
