--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="format.css" />
-    <title>ZakalataMax</title>
+    <title>Сучасна пекарня</title>
   </head>
   <body>
     <header>
@@ -36,13 +36,13 @@
       <section>
         <h2>Формати</h2>
         <article>
-          <h3>Walrus</h3>
+          <h3 lang="en">Walrus</h3>
         </article>
         <article>
-          <h3>Horseshoe</h3>
+          <h3 lang="en">Horseshoe</h3>
         </article>
         <article>
-          <h3>Handlebar</h3>
+          <h3 lang="en">Handlebar</h3>
         </article>
       </section>
       <section>
@@ -51,5 +51,4 @@
     </main>
     <footer></footer>
   </body>
-  111
 </html>
