--- a/index.html
+++ b/index.html
@@ -10,28 +10,61 @@
   <body>
     <header>
       <nav>
-        <!-- logo n menu -->
+        <!-- logo  -->
+        <ul>
+          <li><span class="green">Наші традиції</span></li>
+          <li>Шеф-кухарі</li>
+          <li>Формати</li>
+          <li>Контакти</li>
+        </ul>
       </nav>
       <!-- button -->
     </header>
     <main>
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1><span class="green">Сучасна</span> пекарня</h1>
       </section>
       <section>
+        <ul>
+          <li>Великий попит на ринку</li>
+          <li>Доступні за бюджетом формати</li>
+          <li>Досвідчена управлінська команда</li>
+        </ul>
         <h2>Новий формат традицій</h2>
-        <p><span class="green">Shop bakery</span> блаблабла</p>
         <p>
-          знову блаблабла <span class="green">5 хвилин і тут як тут</span> і
-          знову таки блаблабла
+          <span class="green">Shop bakery</span> — це пекарня, яка взяла все
+          найкраще, і зберегла смак традиційної випічки та натуральність
+          інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі—
+          <span class="green">5 хвилин і замовлення готове</span>. А ще у наших
+          пекарень стильний дизайн та висока якість обслуговування!
         </p>
       </section>
       <section>
         <h2>Наші найкращі кухарі</h2>
-        <h3>Настя</h3>
-        <h3>Влад</h3>
-        <article></article>
-        <article></article>
+        <ul>
+          <li>
+            <article>
+              <h3>Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я освтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для вас найсмачніщі вироби!</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            </article>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Формати</h2>
