--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <header>
       <nav>
-        <!-- logo  -->
+        <a href="#"><!--logo--></a>
         <ul>
-          <li><span class="green">Наші традиції</span></li>
-          <li>Шеф-кухарі</li>
-          <li>Формати</li>
-          <li>Контакти</li>
+          <li>
+            <a href="#"><span class="green">Наші традиції</span></a>
+          </li>
+          <li><a href="#">Шеф-кухарі</a></li>
+          <li><a href="#">Формати</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
       <!-- button -->
@@ -68,20 +70,47 @@
       </section>
       <section>
         <h2>Формати</h2>
-        <article>
-          <h3 lang="en">Walrus</h3>
-        </article>
-        <article>
-          <h3 lang="en">Horseshoe</h3>
-        </article>
-        <article>
-          <h3 lang="en">Handlebar</h3>
-        </article>
+        <ul>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Handlebar</h3>
+            </article>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Приєднуйтеся до мережі пекарень</h2>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <nav>
+        <a href="#"><!--logo--></a>
+        <ul>
+          <li>
+            <a href="#">Наші традиції</a>
+          </li>
+          <li><a href="#">Шеф-кухарі</a></li>
+          <li><a href="#">Формати</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+380960000007</a></li>
+          <li><a href="#">shopbakery@gmail.com</a></li>
+          <li><a href="#">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
