--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header>
       <nav>
-        <a href="#"><!--logo--></a>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+        </a>
         <ul>
           <li>
             <a href="#"><span class="green">Наші традиції</span></a>
@@ -20,7 +22,7 @@
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <!-- button -->
+      <button type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
@@ -43,12 +45,17 @@
           <span class="green">5 хвилин і замовлення готове</span>. А ще у наших
           пекарень стильний дизайн та висока якість обслуговування!
         </p>
+        <img
+          src="./images/baker-man.jpg"
+          alt="Чоловік пекар посміхається на батони"
+        />
       </section>
       <section>
         <h2>Наші найкращі кухарі</h2>
         <ul>
           <li>
             <article>
+              <img src="./images/baker-nastya.jpg" alt="Жінка пекар Настя" />
               <h3>Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я освтілюю у життя цікаві та смачні ідеї.</p>
@@ -57,6 +64,7 @@
           </li>
           <li>
             <article>
+              <img src="./images/baker-vlad.jpg" alt="Чоловік пекар Влад" />
               <h3>Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
@@ -94,7 +102,9 @@
     </main>
     <footer>
       <nav>
-        <a href="#"><!--logo--></a>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
+        </a>
         <ul>
           <li>
             <a href="#">Наші традиції</a>
@@ -107,9 +117,27 @@
       <address>
         <ul>
           <li><a href="tel:+380960000007">+380960000007</a></li>
-          <li><a href="#">shopbakery@gmail.com</a></li>
-          <li><a href="#">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/zDR1itTS7b97MXX78" target="_blank">
+              Україна, м. Київ, вул. Січових Стрільців 54</a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <!--facebook icon-->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!--Instagtram icon-->
+            </a>
+          </li>
         </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>© 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
