--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити 2 дзвінки</button>
+      <button type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
