--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <ul>
           <li>
             <article>
+              <p>daasdadaddadada</p>
               <img src="./images/baker-nastya.jpg" alt="Жінка пекар Настя" />
               <h3>Настя</h3>
               <p>Привіт, я Настя!</p>
