--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+<p>testtest</p>
       <nav>
         <a href="#">
           <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
