--- a/index.html
+++ b/index.html
@@ -15,36 +15,34 @@
         </a>
         <ul>
           <li>
-            <a href="#traditions-section"
-              ><span class="green">Наші традиції</span></a
-            >
+            <a class="link" href="#traditions-section">Наші традиції</a>
           </li>
-          <li><a href="#chiefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li><a class="link" href="#chiefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#formats-section">Формати</a></li>
+          <li><a class="link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
-        <h1><span class="green">Сучасна</span> пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="traditions-section">
-        <ul>
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
-          <span class="green">Shop bakery</span> — це пекарня, яка взяла все
+          <span class="accent">Shop bakery</span> — це пекарня, яка взяла все
           найкраще, і зберегла смак традиційної випічки та натуральність
           інгредієнтів.
         </p>
         <p>
           Ми працюємо як найвідоміші мережі—
-          <span class="green">5 хвилин і замовлення готове</span>. А ще у наших
+          <span class="accent">5 хвилин і замовлення готове</span>. А ще у наших
           пекарень стильний дизайн та висока якість обслуговування!
         </p>
         <img
@@ -53,7 +51,9 @@
         />
       </section>
       <section id="chiefs-section">
-        <h2>Наші найкращі кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -79,7 +79,7 @@
         </ul>
       </section>
       <section id="formats-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -99,8 +99,9 @@
         </ul>
       </section>
       <section id="contacts-section">
-        <h2>Приєднуйтеся до мережі пекарень</h2>
+        <h2 class="section-title">Приєднуйтеся до мережі пекарень</h2>
         <iframe
+          class="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.164542494119!2d30.488676576060854!3d50.45666058691725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1721670101934!5m2!1sru!2sua"
           width="603"
           height="595"
@@ -118,13 +119,11 @@
         </a>
         <ul>
           <li>
-            <a href="#traditions-section"
-              ><span class="green">Наші традиції</span></a
-            >
+            <a class="link" href="#traditions-section">Наші традиції</a>
           </li>
-          <li><a href="#chiefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li><a class="link" href="#chiefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#formats-section">Формати</a></li>
+          <li><a class="link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
