--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
     <title>Сучасна пекарня</title>
+    <!-- FONTS -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap"
+      rel="stylesheet"
+    /> -->
+    <!-- STYLES -->
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
@@ -35,8 +43,8 @@
           <li>Досвідчена управлінська команда</li>
         </ul>
         <h2 class="section-title">Новий формат традицій</h2>
-        <p>
-          <span class="accent">Shop bakery</span> — це пекарня, яка взяла все
+        <p class="traditions-text-uppercase">
+          <span class="accent">shop bakery</span> — це пекарня, яка взяла все
           найкраще, і зберегла смак традиційної випічки та натуральність
           інгредієнтів.
         </p>
@@ -70,7 +78,7 @@
               <h3>Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
-                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
+                Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов,
                 з якою ми ділимось кожен раз з Вами через нашу випічку!
               </p>
               <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
@@ -85,21 +93,43 @@
             <article>
               <h3 lang="en">Walrus</h3>
             </article>
+            <div class="formats-text">
+              <p>Площа: до 120 м2</p>
+              <p>Меню: розширене меню</p>
+              <p>
+                Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                офіціанти-різнороби
+              </p>
+              <p>Посадкові місця: є</p>
+            </div>
           </li>
           <li>
             <article>
-              <h3 lang="en">Walrus</h3>
+              <h3 lang="en">Horseshoe</h3>
             </article>
+            <div class="formats-text">
+              <p>Площа: до 25 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </div>
           </li>
           <li>
             <article>
               <h3 lang="en">Handlebar</h3>
             </article>
+            <div class="formats-text">
+              <p>Площа: до 15 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </div>
           </li>
         </ul>
       </section>
       <section id="contacts-section">
         <h2 class="section-title">Приєднуйтеся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
         <iframe
           class="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.164542494119!2d30.488676576060854!3d50.45666058691725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1721670101934!5m2!1sru!2sua"
@@ -148,7 +178,7 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
+        <a class="link" href="#" target="_blank">Політика конфіденційності</a>
         <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
