footer link fix

--- a/html/index.html
+++ b/html/index.html
@@ -188,12 +188,15 @@
         </nav>
         <address>
           <ul>
-            <li><a href="tel:+380960000007">+380960000007</a></li>
+            <li><a class="link" href="tel:+380960000007">+380960000007</a></li>
             <li>
-              <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+              <a class="link" href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
             </li>
             <li>
               <a
+                class="link"
                 href="https://maps.app.goo.gl/zDR1itTS7b97MXX78"
                 target="_blank"
               >
@@ -201,12 +204,12 @@
               >
             </li>
             <li>
-              <a href="#">
+              <a class="link" href="#">
                 <!--facebook icon-->
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="link" href="#">
                 <!--Instagtram icon-->
               </a>
             </li>
