--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!-- STYLES -->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -81,13 +81,17 @@
       </section>
       <section class="chiefs-section section" id="chiefs-section">
         <div class="container">
-          <h2 class="chiefs-title section-title">
+          <h2 class="chiefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
-                <img src="/images/baker-nastya.jpg" alt="Жінка пекар Настя" />
+                <img
+                  class="chief-photo"
+                  src="/images/baker-nastya.jpg"
+                  alt="Жінка пекар Настя"
+                />
                 <h3>Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я освтілюю у життя цікаві та смачні ідеї.</p>
@@ -96,7 +100,11 @@
             </li>
             <li>
               <article>
-                <img src="/images/baker-vlad.jpg" alt="Чоловік пекар Влад" />
+                <img
+                  class="chief-photo"
+                  src="/images/baker-vlad.jpg"
+                  alt="Чоловік пекар Влад"
+                />
                 <h3>Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -111,7 +119,7 @@
       </section>
       <section class="formats-section section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title">Формати</h2>
+          <h2 class="formats-title section-title centered">Формати</h2>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="formats-card">
