--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               </p>
             </div>
             <img
+              class="traditions-baker-img"
               src="/images/baker-man.jpg"
               alt="Чоловік пекар посміхається на батони"
             />
@@ -84,7 +85,7 @@
           <h2 class="chiefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
-          <ul>
+          <ul class="chiefs-cards">
             <li>
               <article>
                 <img
